# memagent

./: .coderabbit.yaml  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_STYLE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  Dockerfile  Dockerfile.e2e  HANDOFF.md  README.md  TURMOIL_CONCURRENCY_BUGS_REPORT.md  _typos.toml  add_docs.py  add_tests.py  agent.html  deny.toml  docker-compose.dev.yml  fix_doc_links.py  fix_host_metrics.py  fix_input_build.py  fix_input_build_metrics.py  fix_libc.py  fix_safety.py  fix_sensor_config.py  fix_sensor_config2.py  fix_test.sh  fix_test2.sh  fix_test_clippy.py  fix_validation.py  get_logs.py  index.html  index.json  justfile  mise.toml  parse_logfwd_log.py  (+23 more)
crates/ffwd/: Cargo.toml  build.rs
crates/ffwd-arrow/: AGENTS.md  Cargo.toml  README.md
crates/ffwd-arrow/src/: conflict_schema.rs  lib.rs  materialize.rs  scanner.rs
crates/ffwd-arrow/tests/: allocation_regression.rs  columnar_alloc_profile.rs  timestamp_parsing.rs
crates/ffwd-core/: AGENTS.md  Cargo.toml  README.md
crates/ffwd-core/benches/: scanner.rs
crates/ffwd-core/examples/: arrow_ipc_roundtrip.rs
crates/ffwd-core/fuzz/: Cargo.toml
crates/ffwd-core/src/: byte_search.rs  checkpoint_tracker.rs  cri.rs  error.rs  framer.rs  json_scanner.rs  lib.rs  otlp.rs  reassembler.rs  scan_config.rs  scan_predicate.rs  scanner.rs  structural.rs  structural_iter.rs
crates/ffwd-diagnostics/: AGENTS.md  Cargo.toml
crates/ffwd-diagnostics/src/: background_http_task.rs  dashboard.html  diagnostics.rs  lib.rs  metric_history.rs  span_exporter.rs  telemetry_buffer.rs
crates/ffwd-ebpf-proto/: Cargo.toml
crates/ffwd-ebpf-proto/pipe-capture/: README.md
crates/ffwd-ebpf-proto/sensor-ebpf/: Cargo.toml
crates/ffwd-ebpf-proto/src/: common.rs  lib.rs
crates/ffwd-ebpf-proto/xdp-syslog/: test_af_xdp.py
crates/ffwd-kani/: Cargo.toml
crates/ffwd-kani/src/: bytes.rs  hex.rs  iter.rs  lib.rs  numeric.rs  proto.rs
crates/ffwd-lint-attrs/: Cargo.toml
crates/ffwd-lint-attrs/src/: lib.rs
crates/ffwd-opamp/: Cargo.toml
crates/ffwd-opamp/src/: client.rs  lib.rs
crates/ffwd-opamp/tests/: integration.rs
crates/ffwd-otap-proto/: Cargo.toml  build.rs
crates/ffwd-otap-proto/proto/: otap.proto
crates/ffwd-output/: Cargo.toml
crates/ffwd-output/examples/: smart_codegen_bench.rs
crates/ffwd-output/src/: arrow_ipc_sink.rs  conflict_columns.rs  error.rs  factory.rs  file_sink.rs  http_classify.rs  internal_columns.rs  json_lines.rs  lib.rs  loki.rs  metadata.rs  null.rs  otap_sink.rs  pipelined.rs  retry_writer.rs  row_json.rs  sink.rs  stdout.rs  tcp_sink.rs  tests.rs  udp_sink.rs
crates/ffwd-output/tests/: allocation_regression.rs
crates/ffwd-runtime/: AGENTS.md  Cargo.toml
crates/ffwd-runtime/proptest-regressions/: reload.txt
crates/ffwd-runtime/src/: bootstrap.rs  generated_cli.rs  lib.rs  reload.rs  transform.rs  turmoil_barriers.rs
crates/ffwd-test-utils/: Cargo.toml
crates/ffwd-test-utils/src/: arrow.rs  json.rs  lib.rs  sinks.rs
crates/ffwd-transform/: Cargo.toml
crates/ffwd-transform/src/: cast_udf.rs  enrichment.rs  error.rs  lib.rs  query_analyzer.rs  sql_transform.rs  tests.rs
crates/ffwd/src/: cli.rs  commands.rs  config_flow.rs  config_templates.rs  generate.rs  lib.rs  main.rs  send.rs  supervisor.rs  transform.rs  validate.rs
crates/ffwd/tests/: allocation_e2e.rs  allocation_scaling.rs  reload_process.rs
crates/logfwd-arrow/: AGENTS.md  Cargo.toml  README.md
crates/logfwd-arrow/src/: conflict_schema.rs  lib.rs  materialize.rs  scanner.rs  star_schema.rs  storage_builder.rs  streaming_builder.rs
crates/logfwd-arrow/tests/: allocation_regression.rs  columnar_alloc_profile.rs  source_metadata_attach_bench.rs  timestamp_parsing.rs
crates/logfwd-bench/: Cargo.toml  README.md
crates/logfwd-bench/benches/: batch_formation.rs  builder_compare.rs  elasticsearch_arrow.rs  file_io.rs  full_chain.rs  generator_arrow_vs_json.rs  json_lines.rs  otap_proto.rs  otlp_io.rs  output_encode.rs  pipeline.rs  s3_input.rs  source_metadata.rs  throughput_ceiling.rs  transform_overhead.rs
crates/logfwd-bench/src/: cardinality.rs  e2e_profile.rs  es_throughput.rs  explore.rs  file_output_profile.rs  generators.rs  lib.rs  library_eval.rs  main.rs  memory_profile.rs  rss.rs  sizes.rs
crates/logfwd-competitive-bench/: Cargo.toml
crates/logfwd-competitive-bench/src/: blackhole.rs  datagen.rs  download.rs  fake_k8s.rs  main.rs  rate_bench.rs  runner.rs  summarize.rs
crates/logfwd-config/: Cargo.toml
crates/logfwd-config-wasm/: AGENTS.md  Cargo.toml
crates/logfwd-config-wasm/src/: lib.rs
crates/logfwd-config/src/: compat.rs  env.rs  lib.rs  load.rs  serde_helpers.rs  shared.rs  tests_config_parsing.rs  tests_enrichment.rs  tests_generator_config.rs  tests_generator_unsupported.rs  tests_input.rs  tests_otlp_config.rs  tests_output.rs  tests_sensor.rs  tests_server.rs  tests_static_labels.rs  tests_validation.rs  types.rs  validate.rs  validation.rs
crates/logfwd-config/tests/: validation_gaps.rs
crates/logfwd-core/: AGENTS.md  Cargo.toml  README.md
crates/logfwd-core/benches/: scanner.rs  structural_detect.rs
crates/logfwd-core/examples/: arrow_ipc_roundtrip.rs
crates/logfwd-core/fuzz/: .gitignore  Cargo.toml
crates/logfwd-core/src/: aggregator.rs  batch_builder.rs  byte_search.rs  checkpoint.rs  checkpoint_tracker.rs  chunk_classify.rs  columnar_builder.rs  compress.rs  cri.rs  dashboard.html  diagnostics.rs  disk_queue.rs  enrichment.rs  error.rs  filter_hints.rs  format.rs  framer.rs  indexed_builder.rs  input.rs  ipc.rs  json_scanner.rs  lib.rs  (+13 more)
crates/logfwd-correctness/: Cargo.toml
crates/logfwd-diagnostics/: AGENTS.md  Cargo.toml
crates/logfwd-ebpf-proto/: Cargo.toml  SANDBOX_FINDINGS.md  bpf_helpers.py
crates/logfwd-io/: Cargo.toml
crates/logfwd-lint-attrs/: Cargo.toml
crates/logfwd-otap-proto/: Cargo.toml  build.rs
crates/logfwd-output/: Cargo.toml
crates/logfwd-runtime/: AGENTS.md  Cargo.toml
crates/logfwd-test-utils/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
(+1675 files in other folders)
