[workspace]
resolver = "3"
members = [
    "crates/logfwd-config",
    "crates/logfwd-types",
    "crates/logfwd-core",
    "crates/logfwd-arrow",
    "crates/logfwd-transform",
    "crates/logfwd-io",
    "crates/logfwd-proto-build",
    "crates/logfwd-otap-proto",
    "crates/logfwd-output",
    "crates/logfwd",
    "crates/logfwd-bench",
    "crates/logfwd-competitive-bench",
    "crates/logfwd-test-utils",
    "crates/logfwd-ebpf-proto",
]
# default-members: crates that compile without datafusion (~30s vs ~3min).
# Bare `cargo check/clippy` uses these. Use `--workspace` or `-p logfwd`
# to include logfwd-transform (datafusion) and the binary crate.
# CI always uses --workspace.
default-members = [
    "crates/logfwd-config",
    "crates/logfwd-types",
    "crates/logfwd-core",
    "crates/logfwd-arrow",
    "crates/logfwd-io",
    "crates/logfwd-output",
    "crates/logfwd-test-utils",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
arrow = { version = "55", default-features = false, features = ["ipc_compression"] }
backon = { version = "1", default-features = false, features = ["tokio-sleep"] }
bytes = "1"
clap = "4.5"
clap_complete = "4.5"
clap_complete_nushell = "4.6"
arrow-json = "55"
datafusion = { version = "48", default-features = false, features = [
    "string_expressions",
    "unicode_expressions",
    "regex_expressions",
    "recursive_protection",
] }
globset = "0.4"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-proto", "reqwest-client", "trace", "metrics"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.5"
tokio = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
turmoil = "0.7"
walkdir = "2"
smallvec = { version = "1", features = ["union"] }
thiserror = { version = "2", default-features = false }
anyhow = "1"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
items_after_statements = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
inline_always = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
struct_excessive_bools = "allow"
wildcard_imports = "allow"
unnested_or_patterns = "allow"
unreadable_literal = "allow"
single_match_else = "allow"
manual_let_else = "allow"
uninlined_format_args = "allow"
too_many_lines = "allow"
match_same_arms = "allow"
similar_names = "allow"
trivially_copy_pass_by_ref = "allow"
many_single_char_names = "allow"
large_stack_arrays = "allow"
cast_possible_wrap = "allow"
assigning_clones = "allow"
redundant_clone = "warn"
cloned_instead_of_copied = "warn"
needless_pass_by_ref_mut = "warn"
undocumented_unsafe_blocks = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(feature, values("turmoil"))'] }
unused_qualifications = "warn"

[profile.dev]
# line-tables-only keeps backtraces readable while shrinking debug binaries
# significantly (DataFusion debug info is enormous). (#812)
debug = "line-tables-only"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
overflow-checks = true
debug = true  # needed for flamegraphs and dhat to show source locations

[profile.test]
# line-tables-only keeps backtraces readable while shrinking test binaries
# from ~180 MB to ~60 MB each (DataFusion debug info is enormous). (#812)
debug = "line-tables-only"

[profile.bench]
inherits = "release"
