[workspace]
resolver = "3"
members = [
    "crates/logfwd-config",
    "crates/logfwd-runtime",
    "crates/logfwd-types",
    "crates/logfwd-diagnostics",
    "crates/logfwd-core",
    "crates/logfwd-arrow",
    "crates/logfwd-transform",
    "crates/logfwd-io",
    "crates/logfwd-proto-build",
    "crates/logfwd-otap-proto",
    "crates/logfwd-output",
    "crates/logfwd",
    "crates/logfwd-bench",
    "crates/logfwd-competitive-bench",
    "crates/logfwd-test-utils",
    "crates/logfwd-ebpf-proto",
    "crates/logfwd-ebpf-proto/sensor-ebpf",
    "crates/logfwd-ebpf-proto/sensor-ebpf/sensor-ebpf-common",
    "crates/logfwd-config-wasm",
]
# sensor-ebpf-kern requires nightly + bpfel-unknown-none target (eBPF bytecode).
# It is intentionally excluded from the workspace.
exclude = [
    "crates/logfwd-ebpf-proto/sensor-ebpf/sensor-ebpf-kern",
]
# default-members: crates that compile without datafusion (~30s vs ~3min).
# Bare `cargo check/clippy` uses these. Use `--workspace` or `-p logfwd`
# to include logfwd-transform (datafusion) and the binary crate.
# CI and `just ci-all` always use --workspace.
default-members = [
    "crates/logfwd-config",
    "crates/logfwd-types",
    "crates/logfwd-diagnostics",
    "crates/logfwd-core",
    "crates/logfwd-arrow",
    "crates/logfwd-io",
    "crates/logfwd-output",
    "crates/logfwd-test-utils",
]

[workspace.package]
edition = "2024"
rust-version = "1.89"

[workspace.dependencies]
arrow = { version = "58", default-features = false, features = [
    "ipc_compression",
] }
backon = { version = "1", default-features = false, features = ["tokio-sleep"] }
bytes = "1"
chrono = { version = "0.4.44", default-features = false }
clap = "4.5"
clap_complete = "4.5"
clap_complete_nushell = "4.6"
config = { version = "0.15.22", default-features = false }
arrow-json = "58"
datafusion = { version = "53", default-features = false, features = [
    "sql",
    "string_expressions",
    "unicode_expressions",
    "regex_expressions",
    "recursive_protection",
] }
fail = "0.5"
futures-util = "0.3"
globset = "0.4"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = [
    "http-proto",
    "reqwest-client",
    "trace",
    "metrics",
] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.5"
tokio = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
turmoil = "0.7"
walkdir = "2"
smallvec = { version = "1", features = ["union"] }
thiserror = { version = "2", default-features = false }
url = "2"
anyhow = "1"
axum = { version = "0.8", default-features = false }
libc = "0.2"
serde_json = "1"
serde_yaml_ng = "0.10"
proptest = "1"
tiny_http = "0.12"
aya = "0.13.1"
sysinfo = "0.38"
ureq = { version = "3", default-features = false, features = ["rustls"] }
csv = "1"
flate2 = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"
varsubst = { version = "0.0.1", default-features = false }
xxhash-rust = { version = "0.8.15", features = ["xxh32", "xxh64"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
rcgen = "0.14"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
items_after_statements = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
inline_always = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
struct_excessive_bools = "allow"
wildcard_imports = "allow"
unnested_or_patterns = "allow"
unreadable_literal = "allow"
single_match_else = "allow"
manual_let_else = "allow"
uninlined_format_args = "allow"
too_many_lines = "allow"
match_same_arms = "allow"
similar_names = "allow"
trivially_copy_pass_by_ref = "allow"
many_single_char_names = "allow"
large_stack_arrays = "allow"
cast_possible_wrap = "allow"
assigning_clones = "allow"
redundant_clone = "warn"
cloned_instead_of_copied = "warn"
needless_pass_by_ref_mut = "warn"
undocumented_unsafe_blocks = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(kani)',
    'cfg(feature, values("turmoil", "internal-failpoints", "otlp-research", "otlp-profile-alloc"))',
] }
unused_qualifications = "warn"

[profile.dev]
# line-tables-only keeps backtraces readable while shrinking debug binaries
# significantly (DataFusion debug info is enormous). (#812)
debug = "line-tables-only"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
overflow-checks = true
debug = true           # needed for flamegraphs and dhat to show source locations

[profile.test]
# line-tables-only keeps backtraces readable while shrinking test binaries
# from ~180 MB to ~60 MB each (DataFusion debug info is enormous). (#812)
debug = "line-tables-only"

[profile.bench]
inherits = "release"
