[workspace]
resolver = "3"
members = [
    "crates/logfwd-config",
    "crates/logfwd-runtime",
    "crates/logfwd-types",
    "crates/logfwd-diagnostics",
    "crates/logfwd-core",
    "crates/logfwd-arrow",
    "crates/logfwd-transform",
    "crates/logfwd-io",
    "crates/logfwd-proto-build",
    "crates/logfwd-otap-proto",
    "crates/logfwd-output",
    "crates/logfwd",
    "crates/logfwd-bench",
    "crates/logfwd-competitive-bench",
    "crates/logfwd-test-utils",
    "crates/logfwd-lint-attrs",
    "crates/logfwd-ebpf-proto",
    "crates/logfwd-ebpf-proto/sensor-ebpf",
    "crates/logfwd-ebpf-proto/sensor-ebpf/sensor-ebpf-common",
    "crates/logfwd-config-wasm",
    "xtask",
]
# sensor-ebpf-kern requires nightly + bpfel-unknown-none target (eBPF bytecode).
# It is intentionally excluded from the workspace.
exclude = [
    "crates/logfwd-ebpf-proto/sensor-ebpf/sensor-ebpf-kern",
    # logfwd-lints pins a specific rustc nightly and links against
    # rustc-private crates. It is invoked via `cargo dylint`, not the
    # regular workspace build.
    "crates/logfwd-lints",
]
# default-members: crates that compile without datafusion (~30s vs ~3min).
# Bare `cargo check/clippy` uses these. Use `--workspace` or `-p logfwd`
# to include logfwd-transform (datafusion) and the binary crate.
# CI and `just ci-all` always use --workspace.
default-members = [
    "crates/logfwd-config",
    "crates/logfwd-types",
    "crates/logfwd-diagnostics",
    "crates/logfwd-core",
    "crates/logfwd-lint-attrs",
    "crates/logfwd-arrow",
    "crates/logfwd-io",
    "crates/logfwd-output",
    "crates/logfwd-test-utils",
]

[workspace.package]
edition = "2024"
rust-version = "1.89"

[workspace.dependencies]
arrow = { version = "58", default-features = false, features = [
    "ipc_compression",
] }
backon = { version = "1", default-features = false, features = ["tokio-sleep"] }
bytes = "1"
chrono = { version = "0.4.44", default-features = false }
clap = "4.5"
clap_complete = "4.5"
clap_complete_nushell = "4.6"
config = { version = "0.15.22", default-features = false }
arrow-json = "58"
parquet = { version = "58", default-features = false, features = [
    "arrow",
    "zstd",
] }
datafusion = { version = "53", default-features = false, features = [
    "sql",
    "string_expressions",
    "unicode_expressions",
    "regex_expressions",
    "recursive_protection",
] }
fail = "0.5"
futures-util = "0.3"
globset = "0.4"
opentelemetry = { version = "0.31", default-features = false, features = [
    "trace",
    "metrics",
] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = [
    "trace",
    "metrics",
    "rt-tokio",
] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = [
    "http-proto",
    "reqwest-client",
    "trace",
    "metrics",
] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.5"
tokio = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
turmoil = "0.7"
walkdir = "2"
smallvec = { version = "1", features = ["union"] }
stats_alloc = "0.1"
thiserror = { version = "2", default-features = false }
url = "2"
anyhow = "1"
axum = { version = "0.8", default-features = false }
libc = "0.2"
serde_json = "1"
serde_yaml_ng = "0.10"
proptest = "1"
tiny_http = "0.12"
aya = "0.13.1"
sysinfo = "0.38"
ureq = { version = "3", default-features = false, features = ["rustls"] }
csv = "1"
flate2 = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"
varsubst = { version = "0.0.1", default-features = false }
xxhash-rust = { version = "0.8.15", features = ["xxh32", "xxh64"] }
rustls = { version = "0.23", default-features = false, features = [
    "aws_lc_rs",
] }
rcgen = "0.14"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
items_after_statements = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
inline_always = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "warn"
struct_excessive_bools = "allow"
wildcard_imports = "allow"
unnested_or_patterns = "allow"
unreadable_literal = "allow"
single_match_else = "allow"
manual_let_else = "allow"
too_many_lines = "allow"
match_same_arms = "allow"
similar_names = "allow"
trivially_copy_pass_by_ref = "allow"
many_single_char_names = "allow"
large_stack_arrays = "allow"
cast_possible_wrap = "allow"
assigning_clones = "allow"
redundant_clone = "warn"
cloned_instead_of_copied = "warn"
needless_pass_by_ref_mut = "warn"
undocumented_unsafe_blocks = "deny"
dbg_macro = "deny"
large_enum_variant = "warn"
print_stdout = "warn"
print_stderr = "warn"
let_underscore_future = "deny"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
large_futures = "warn"
# ----- easy-win additions -----
# Tier 1: modernization, auto-fixable.
uninlined_format_args = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
# Tier 2: catches real bugs with low fallout.
map_err_ignore = "warn"
implicit_clone = "warn"
needless_for_each = "warn"
or_fun_call = "warn"
checked_conversions = "warn"
# Tier 3: catches stubs and forgotten markers.
todo = "deny"
unimplemented = "deny"
# Tier 3b: restriction-group correctness lints (opt-in, not in pedantic).
rc_mutex = "deny"
lossy_float_literal = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
verbose_file_reads = "warn"
unnecessary_self_imports = "warn"
# Tier 4: nursery lints adopted from Reth — all zero existing violations.
collection_is_never_read = "warn"
derive_partial_eq_without_eq = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
manual_assert = "warn"
manual_string_new = "warn"
naive_bytecount = "warn"
path_buf_push_overwrite = "warn"
string_lit_as_bytes = "warn"
unnecessary_struct_initialization = "warn"
zero_sized_map_values = "warn"
# Tier 5: additional restriction-group lints (low-risk correctness).
rc_buffer = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
pub_without_shorthand = "warn"
unneeded_field_pattern = "warn"
empty_drop = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(kani)',
    'cfg(fuzzing)',
    'cfg(feature, values("turmoil", "internal-failpoints", "otlp-research", "otlp-profile-alloc"))',
] }
unused_qualifications = "warn"

[profile.dev]
# line-tables-only keeps backtraces readable while shrinking debug binaries
# significantly (DataFusion debug info is enormous). (#812)
debug = "line-tables-only"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
overflow-checks = true
debug = true           # needed for flamegraphs and dhat to show source locations

[profile.test]
# line-tables-only keeps backtraces readable while shrinking test binaries
# from ~180 MB to ~60 MB each (DataFusion debug info is enormous). (#812)
debug = "line-tables-only"

[profile.bench]
inherits = "release"
