[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
logfwd-config = { path = "../crates/logfwd-config" }
quote = "1"
regex = "1"
syn = { version = "2", features = ["full", "visit"] }
toml = "0.9"
walkdir = "2"

[lints]
workspace = true
