[package]
name = "ffwd-arrow"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
doctest = false

[features]
# Expose columnar builder internals for allocation profiling integration tests.
# Not for production use.
_test-internals = []

[dependencies]
arrow = { workspace = true }
bytes = "1"
ffwd-core = { version = "0.1.0", path = "../ffwd-core" }
ffwd-kani = { version = "0.1.0", path = "../ffwd-kani" }
ffwd-lint-attrs = { version = "0.1.0", path = "../ffwd-lint-attrs" }
ffwd-types = { version = "0.1.0", path = "../ffwd-types" }

[dev-dependencies]
proptest = { workspace = true }
serial_test = "3"
stats_alloc = { workspace = true }

[[bin]]
name = "builder_profile"
required-features = ["_test-internals"]

[lints]
clippy.indexing_slicing = "deny"
