[package]
name = "ffwd-diagnostics"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
axum = { workspace = true, features = ["http1", "json", "tokio", "ws"] }
ffwd-types = { version = "0.1.0", path = "../ffwd-types" }
libc = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "net", "macros"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
