[package]
name = "ffwd-kani"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Shared oracle and reference implementations for Kani formal verification proofs."

[features]
# Gate expensive Kani proofs (>30s solver time) so PR CI stays fast.
# Push-to-main and nightly runs use --features kani-slow to verify everything.
kani-slow = []

[lib]
doctest = false

[dependencies]

[lints]
workspace = true
