[package]
name = "logfwd-arrow"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
doctest = false

[features]
# Expose columnar builder internals for allocation profiling integration tests.
# Not for production use.
_test-internals = []

[dependencies]
arrow = { workspace = true }
bytes = "1"
logfwd-core = { version = "0.1.0", path = "../logfwd-core" }
logfwd-kani = { version = "0.1.0", path = "../logfwd-kani" }
logfwd-lint-attrs = { version = "0.1.0", path = "../logfwd-lint-attrs" }
logfwd-types = { version = "0.1.0", path = "../logfwd-types" }

[dev-dependencies]
proptest = { workspace = true }
serial_test = "3"
stats_alloc = { workspace = true }

[[bin]]
name = "builder_profile"
required-features = ["_test-internals"]

[lints]
workspace = true
