[package]
name = "logfwd-bench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
dhat-heap = ["dep:dhat"]
otlp-profile-alloc = []

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dependencies]
logfwd-core = { version = "0.1.0", path = "../logfwd-core" }
logfwd-arrow = { version = "0.1.0", path = "../logfwd-arrow" }
logfwd-transform = { version = "0.1.0", path = "../logfwd-transform" }
logfwd-output = { version = "0.1.0", path = "../logfwd-output" }
logfwd-types = { version = "0.1.0", path = "../logfwd-types" }
arrow = { workspace = true }
bytes = "1"
datafusion = { workspace = true }
criterion = { version = "0.7", features = ["html_reports"] }
fastrand = "2"
memchr = "2"
serde = { workspace = true }
serde_json = "1"
logfwd-io = { version = "0.1.0", path = "../logfwd-io", features = ["otlp-research"] }
stats_alloc = "0.1"
tokio = { version = "1", features = ["rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
pprof = { version = "0.15", features = ["flamegraph"] }
tempfile = "3"
dhat = { version = "0.3", optional = true }
tiny_http = "0.12"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
http-body-util = "0.1"
flate2 = "1"

# Research: library evaluation candidates
axum = "0.8"
async-compression = { version = "0.4", features = ["tokio", "zstd", "gzip"] }
backon = { version = "1", features = ["tokio-sleep"] }
zstd = "0.13"
prost = "0.14"
opentelemetry-proto = { version = "0.31", features = ["logs", "gen-tonic-messages"] }
globset = "0.4"
glob = "0.3"
sonic-rs = "0.5"

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "elasticsearch_arrow"
harness = false

[[bench]]
name = "builder_compare"
harness = false

[[bench]]
name = "output_encode"
harness = false

[[bench]]
name = "otap_proto"
harness = false

[[bench]]
name = "otlp_io"
harness = false

[[bench]]
name = "full_chain"
harness = false

[[bench]]
name = "file_io"
harness = false

[[bench]]
name = "batch_formation"
harness = false

[[bench]]
name = "throughput_ceiling"
harness = false

[[bench]]
name = "transform_overhead"
harness = false

[[bin]]
name = "es-throughput"
path = "src/es_throughput.rs"

[[bin]]
name = "memory-profile"
path = "src/memory_profile.rs"

[[bin]]
name = "library-eval"
path = "src/library_eval.rs"

[lints]
workspace = true
