[package]
name = "logfwd-bench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
dhat-heap = ["dep:dhat"]
otlp-profile-alloc = []

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dependencies]
arrow = { workspace = true }
bytes = "1"
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }
datafusion = { workspace = true }
dhat = { version = "0.3", optional = true }
fastrand = "2"
flate2 = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
logfwd-arrow = { version = "0.1.0", path = "../logfwd-arrow" }
logfwd-core = { version = "0.1.0", path = "../logfwd-core" }
logfwd-io = { version = "0.1.0", path = "../logfwd-io", features = [
    "otlp-research",
    "s3",
] }
logfwd-output = { version = "0.1.0", path = "../logfwd-output" }
logfwd-transform = { version = "0.1.0", path = "../logfwd-transform" }
logfwd-types = { version = "0.1.0", path = "../logfwd-types" }
memchr = "2"
pprof = { version = "0.15", features = ["flamegraph"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
serde = { workspace = true }
serde_json = "1"
stats_alloc = { workspace = true }
tempfile = "3"
tiny_http = "0.12"
tokio = { version = "1", features = ["rt-multi-thread"] }

# Research: library evaluation candidates
async-compression = { version = "0.4", features = ["tokio", "zstd", "gzip"] }
axum = "0.8"
backon = { version = "1", features = ["tokio-sleep"] }
glob = "0.3"
globset = "0.4"
opentelemetry-proto = { version = "0.31", features = [
    "logs",
    "gen-tonic-messages",
] }
prost = "0.14"
sonic-rs = "0.5"
zstd = "0.13"

[[bench]]
name = "json_lines"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "elasticsearch_arrow"
harness = false

[[bench]]
name = "builder_compare"
harness = false

[[bench]]
name = "output_encode"
harness = false

[[bench]]
name = "otap_proto"
harness = false

[[bench]]
name = "otlp_io"
harness = false

[[bench]]
name = "full_chain"
harness = false

[[bench]]
name = "file_io"
harness = false

[[bench]]
name = "batch_formation"
harness = false

[[bench]]
name = "throughput_ceiling"
harness = false

[[bench]]
name = "transform_overhead"
harness = false

[[bench]]
name = "s3_input"
harness = false

[[bench]]
name = "source_metadata"
harness = false

[[bin]]
name = "es-throughput"
path = "src/es_throughput.rs"

[[bin]]
name = "memory-profile"
path = "src/memory_profile.rs"

[[bin]]
name = "file_output_profile"
path = "src/file_output_profile.rs"

[[bin]]
name = "library-eval"
path = "src/library_eval.rs"

[lints]
workspace = true
